--- a/first.ipynb
+++ b/first.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
