updated with new

--- a/language_translator.ipynb
+++ b/language_translator.ipynb
@@ -103,6 +103,57 @@
     "\n",
     "chain2({'sentence':\"Hello How are you\",'target_language':'hindi'})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain import PromptTemplate, FewShotPromptTemplate\n",
+    "\n",
+    "# First, create the list of few shot examples.\n",
+    "examples = [\n",
+    "    {\"word\": \"happy\", \"antonym\": \"sad\"},\n",
+    "    {\"word\": \"tall\", \"antonym\": \"short\"},\n",
+    "]\n",
+    "\n",
+    "# Next, we specify the template to format the examples we have provided.\n",
+    "# We use the `PromptTemplate` class for this.\n",
+    "example_formatter_template = \"\"\"Word: {word}\n",
+    "Antonym: {antonym}\n",
+    "\"\"\"\n",
+    "\n",
+    "example_prompt = PromptTemplate(\n",
+    "    input_variables=[\"word\", \"antonym\"],\n",
+    "    template=example_formatter_template,\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Finally, we create the `FewShotPromptTemplate` object.\n",
+    "few_shot_prompt = FewShotPromptTemplate(\n",
+    "    # These are the examples we want to insert into the prompt.\n",
+    "    examples=examples,\n",
+    "    # This is how we want to format the examples when we insert them into the prompt.\n",
+    "    example_prompt=example_prompt,\n",
+    "    # The prefix is some text that goes before the examples in the prompt.\n",
+    "    # Usually, this consists of intructions.\n",
+    "    prefix=\"Give the antonym of every input\\n\",\n",
+    "    # The suffix is some text that goes after the examples in the prompt.\n",
+    "    # Usually, this is where the user input will go\n",
+    "    suffix=\"Word: {input}\\nAntonym: \",\n",
+    "    # The input variables are the variables that the overall prompt expects.\n",
+    "    input_variables=[\"input\"],\n",
+    "    # The example_separator is the string we will use to join the prefix, examples, and suffix together with.\n",
+    "    example_separator=\"\\n\",\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
